Box overflow layout issue

--- a/public/stylesheets/assist.css
+++ b/public/stylesheets/assist.css
@@ -39,8 +39,8 @@
 	float: left;
 	position: relative;
 	margin-right: 3px; 
-	margin-bottom: 35px;
-	height:385px; /* Please adjust the _navbox no_variations height as well */
+	margin-bottom: 12px;
+	height:404px; /* Please adjust the _navbox no_variations height as well */
  	width: 181px; /*+2 for the border*/
 	background: right center url(../images/seperatorbar.png) no-repeat;*/
   overflow: hidden;
